# Eittel

./: .gitignore  pyproject.toml
src/eittel/integrations/gsuite/auth/: __init__.py  credential_store.py  firestore_credential_store.py  session_store.py
src/eittel/integrations/gsuite/gcalendar/: client.py
src/eittel/integrations/gsuite/gmail/: client.py
src/eittel/integrations/wrappers/adk/: __init__.py  base_google_tool.py  calendar_tools.py  gmail_tools.py
src/eittel/models/: __init__.py
src/eittel/models/openai/: connection.py  llm.py  open_events.py  tool_schema.py
src/eittel/oauth/: __init__.py  firebase_auth.py  google_routes.py  oauth_manager.py  state_storage.py
src/eittel/services/reddis/: __init__.py  redis_session_service.py
src/eittel/tools/: __init__.py  context_agent_tool.py
